@@ -22,21 +22,36 @@ import org.junit.runner.RunWith
 import org.scalatest.WordSpec
 import org.scalatest.junit.JUnitRunner
 
-class TestBase64Encoder extends Base64StringEncoder {
-}
-
 @RunWith(classOf[JUnitRunner])
 class StringEncoderTest extends WordSpec {
   val longString = "A string that is really really really really really really long and has more than 76 characters"
   val result = "QSBzdHJpbmcgdGhhdCBpcyByZWFsbHkgcmVhbGx5IHJlYWxseSByZWFsbHkgcmVhbGx5IHJlYWxseSBsb25nIGFuZCBoYXMgbW9yZSB0aGFuIDc2IGNoYXJhY3RlcnM="
-  val testEncoder = new TestBase64Encoder()
 
   "strip new lines" in {
-    assert(testEncoder.encode(longString.getBytes) === result)
+    assert(Base64StringEncoder.encode(longString.getBytes) === result)
   }
 
   "decode value with stripped new lines" in {
-    assert(new String(testEncoder.decode(result)) === longString)
+    assert(new String(Base64StringEncoder.decode(result)) === longString)
+  }
+}
+
+@RunWith(classOf[JUnitRunner])
+class Base64StringEncoderTest extends WordSpec {
+  val urlUnsafeBytes = Array(-1.toByte, -32.toByte)
+  val resultUnsafe = "/+A"
+  val resultSafe   = "_-A"
+
+  "encode / as _ and encode + as - to maintain url safe strings" in {
+    assert(Base64UrlSafeStringEncoder.encode(urlUnsafeBytes) === resultSafe)
+  }
+
+  "decode url-safe strings" in {
+    assert(Base64UrlSafeStringEncoder.decode(resultSafe) === urlUnsafeBytes)
+  }
+
+  "decode url-unsafe strings" in {
+    assert(Base64UrlSafeStringEncoder.decode(resultUnsafe) === urlUnsafeBytes)
   }
 }
 
