@@ -24,6 +24,10 @@ API Changes:
     `com.twitter.concurrent`. Backwards compatibility aliases remain for Scala
     users, but Java users will need to update their imports. ``RB_ID=758061``
 
+  * util-codec: Add a new encoder `com.twitter.util.Base64UrlSafeStringEncoder`
+    which extends from `com.twitter.util.Base64StringEncoder`. Both the url-safe
+    and non-url-safe encoders can decode all strings generated by either. ``RB_ID=765189``
+
 6.29.0  2015-10-15
 
 New Features:
